added home section

--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,11 @@ html::-webkit-scrollbar-track{
 html::-webkit-scrollbar-thumb{
     background: linear-gradient(90deg, #579ac9, #73aad0);
 }
+section{
+    min-height: 100vh;
+    padding: 1rem 7%;
+    padding-top:6rem;
+}
 .btn{
     padding: .7rem 3rem;
     font-size: 2rem;
@@ -38,6 +43,25 @@ html::-webkit-scrollbar-thumb{
     margin-top: 1rem;
     cursor: pointer;
     box-shadow: 0 .1rem .3rem rgba(0, 0, 0, .3);
+    position: relative;
+    overflow: hidden;
+    z-index: 0;
+}
+.btn::before{
+    content: '';
+    position: absolute;
+    top:-1rem;
+    left: -100%;
+    background: #fff9;
+    height: 150%;
+    width: 20%;
+    transform: rotate(25deg);
+    z-index: -1;
+
+}
+.btn:hover:before{
+    transition: .3s linear;
+    left: 120%;
 }
 header{
     width: 100%;
@@ -160,6 +184,47 @@ header #menu{
 .login-form form .fa-times:hover{
     color:#444;
 }
+.home{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: column;
+    background: url(../images/home-bg.jpg) no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    position: relative;
+    text-align: center;
+}
+.home h1{
+    font-size: 6rem;
+    color: #666;
+}
+.home p{
+    font-size: 1.9rem;
+    color: #999;
+    padding: 1rem 0;
+    width: 70rem;
+}
+.home .shape{
+    position: absolute;
+    bottom: -.2rem;
+    left: 0;
+    height: 15rem;
+    width: 100%;
+    background: url(../images/shape.png);
+    block-size: 100rem 15rem;
+    filter: drop-shadow(0 -.1rem .1rem rgba(0,0,0,.2));
+    animation: animate 10s linear infinite;
+}
+@keyframes animate{
+    0%{
+        background-position-x: 0rem;
+    }
+    100%{
+        background-position-x: 100rem;
+    }
+}
 
 /* media queries */
 @media (max-width:768px){
@@ -197,6 +262,12 @@ header #menu{
     }
     header .navbar.nav-toggle{
         top: 6.4rem;
+    }
+    .home h1{
+        font-size: 4rem;
+    }
+    .home p{
+        width: auto;
     }
 }
 @media (max-width:500px){
