--- a/css/style.css
+++ b/css/style.css
@@ -385,6 +385,53 @@ header #menu{
     background: #fff;
     color: #333;
 }
+.footer{
+    background: #333;  
+}
+.footer .box-container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.footer .box-container .box{
+    margin: 1.5rem;
+    text-align: center;
+    flex:1 1 25rem;
+}
+.footer .box-container .box h3{
+    font-size: 2.5rem;
+    color: #fff;
+    padding: 1rem 0;
+}
+.footer .box-container .box p{
+    font-size: 1.7rem;
+    color: #eee;
+    padding: .7rem 0;
+}
+.footer .box-container .box p i{
+    padding-right: .5rem;
+    color: #73aad0;
+}
+.footer .box-container .box a{
+    font-size: 1.6rem;
+    display: block;
+    padding: .5rem 0;
+    color: #eee;
+}
+.footer .box-container .box a:hover{
+    text-decoration: underline;
+}
+.footer .credit{
+    padding:2rem 1rem;
+    font-size: 2rem;
+    color: #fff;
+    background: #111;
+    text-align: center;
+    font-weight: normal;
+}
+.footer .credit a{
+    color: #73aad0;
+}
 
 
 /* media queries */
